# non-linear-error-detection

./: README.md  turtlebot3_teleop_key  turtlebot3_waffle_pi.urdf.xacro
A-LOAM/: CMakeLists.txt  aloam_velodyne.rviz
A-LOAM/launch/: aloam_velodyne_HDL_32.launch
A-LOAM/rviz_cfg/: aloam_velodyne.rviz
A-LOAM/src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  scanRegistration.cpp
follower/: CMakeLists.txt  package.xml  tmp.cpp
follower/config/: config.yaml
follower/include/: follower.h
follower/launch/: aloam_velodyne_VLP_16.launch  move_car.launch  planning.launch  turtlebot3_slam.launch  unknownnav.launch
follower/param/: costmap_common_params_waffle.yaml  costmap_common_params_waffle_pi.yaml  dwa_local_planner_params_waffle.yaml  gmapping_params.yaml  move_base_params.yaml
follower/src/: follower.cpp
nuise/: CMakeLists.txt  package.xml
nuise/include/: map_helper_ros.h  nuise.h
nuise/launch/: aloam_velodyne_VLP_16.launch  move_base.launch  turtlebot3_gmapping.launch  turtlebot3_slam.launch  unknownnav.launch
nuise/param/: costmap_common_params_waffle_pi.yaml  global_costmap_params.yaml  gmapping_params.yaml
nuise/src/: map_helper_ros.cpp  nuise.cpp
rs_to_velodyne/: package.xml
rs_to_velodyne/launch/: rs_helios_to_velo_xyzirt.launch  rs_m1_to_velo_xyzirt.launch  rs_to_velodyne_xyzi.launch
rs_to_velodyne/src/: rs_to_velodyne.cpp
slam_gmapping/gmapping/: CMakeLists.txt
slam_gmapping/gmapping/src/: slam_gmapping.cpp
